--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "firebase": "^9.17.1",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-calendars": "^1.1293.0",
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0"
+    "react-native-screens": "~3.18.0",
+    "react-native-ui-lib": "^6.30.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
