--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-ui-lib": "^6.30.1"
+    "react-native-select-dropdown": "^3.2.1",
+    "react-native-ui-lib": "^6.30.1",
+    "react-native-wheel-pick": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
